--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,10 +1,13 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: ${{ github.actor }}'s banger work flow'
 on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted
     steps:
-      - run: 
-          # do something to run the code
-          pwd
+      - run: |
+          # build image
+          docker build -t enoch-test-blazor-thing .
+
+          # run image
+          docker run -d enoch-test-blazor-thing
