added ports and name

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,8 @@ jobs:
           docker build -t enoch-test-blazor-thing .
 
           # run image
-          docker run -d enoch-test-blazor-thing
+          docker run -d \
+          -p 3252:7856 --name "enoch-test-blazor-thing"\
+          enoch-test-blazor-thing
 
           echo "made it to the end ╰(▔∀▔)╯ "
