--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,7 +15,7 @@ jobs:
           # run image
           docker run -d \
             -p 9131:8080 \
-            --name "enoch-test-blazor-thing" \
+            --name enoch-test-blazor-thing \
             enoch-test-blazor-thing
 
           echo "made it to the end ╰(▔∀▔)╯ "
